# tmp-benchmark

./: .gitignore  README.md  claude_dashboard.html  pyproject.toml
src/benchmark/bench/: core.py  cpu.py  disk.py  memory.py  ml.py  run_all.py  tensor.py
src/benchmark/dashboard/: generate.py
src/benchmark/pipeline/: bottlenecks.py  train.py
